fix: user role pemissions
